--- a/package.json
+++ b/package.json
@@ -11,8 +11,16 @@
     "react-native": "0.37.0",
     "react-mixin": "^3.0.5",
     "immutable": "^3.8.1",
-    "react-native-timer-mixin": "^0.11.0"
-
+    "lodash": "^4.14.1",
+    "react-native-timer-mixin": "^0.11.0",
+    "react-redux": "^4.4.5",
+    "redux": "^3.5.2",
+    "redux-act": "^1.1.0",
+    "redux-logger": "^2.6.1",
+    "redux-persist": "^3.5.0",
+    "redux-persist-transform-immutable": "^3.2.0",
+    "redux-thunk": "^2.1.0",
+    "reselect": "^2.5.1"
   },
   "jest": {
     "preset": "jest-react-native"
